--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CopyChangesToMainRepo
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ master ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,4 +29,4 @@ jobs:
         dst_owner: codeporting-translator
         dst_repo_name: hugo-docs
         dst_branch: main
-        src_branch: master
+        src_branch: main
